# ClientProject

client-core/: .env  .env-example  alembic.ini  pyproject.toml
client-core/alembic/: env.py
client-core/alembic/versions/: 2b7ebe0a0e95_initial_migration.py
client-core/app/: main.py
client-core/app/core/: config.py  database.py  email.py  security.py
client-core/app/models/: __init__.py  client_db_tables.py  company_db_tables.py
client-core/app/routers/: ClientProject.code-workspace  auth.py  main.py
client-core/app/schemas/: client.py  common.py  company.py
client-core/app/services/: utils.py
