[project]
name = "collaborator"
version = "0.1"
description = "client collaboration platform"
authors = [
    {name = "chandani-copods",email = "chandani.mourya@copods.co"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
